# Mean_Shift_clustering

./: 2D_Mean_Shift.cu  CMakeLists.txt  MeanShift.cpp  MeanShiftOpenMp.cpp  Mean_Shift_Seq.py  Point.h  README.md  evaluate_mean_shift.py  generate_dataset.py
datasets/: 2D_data_100.csv  2D_data_1000.csv  2D_data_10000.csv  2D_data_100000.csv  2D_data_20000.csv  2D_data_3.csv  2D_data_3_centroids.csv  2D_data_50000.csv
results/: 2D_data_3_results.csv
